More jaxb1 removal fixes
Signed-off-by: Roman Grigoriadi <roman.grigoriadi@oracle.com>